update linter rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,15 +12,7 @@
         "sourceType": "module"
     },
     "rules": {
-      "import/extensions": [
-        "warn",
-        "ignorePackages",
-        {
-          "js": "never",
-          "jsx": "never",
-          "ts": "never",
-          "tsx": "never"
-        }
-      ]
+      "no-console": 0,
+      "import/extensions": 0
     }
 }
