update Eslint rules for Jest

--- a/package.json
+++ b/package.json
@@ -4,22 +4,27 @@
   "description": "[![Actions Status](https://github.com/voxman90/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/voxman90/frontend-project-44/actions)",
   "bin": {
     "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js"
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js"
   },
-  "main": "bin/brain-games.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
   "keywords": [
-    "js"
+    "js",
+    "Makefile",
+    "jest"
   ],
   "author": "Maxim Byts",
   "license": "ISC",
   "devDependencies": {
+    "@jest/globals": "^29.6.2",
     "eslint": "^8.46.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-jest": "^27.2.3",
     "jest": "^29.6.2",
     "jest-cli": "^29.6.2"
   },
