--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,17 +2,21 @@
     "root": true,
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "jest": true
     },
     "extends": [
-        "airbnb-base"
+        "airbnb-base",
+        "plugin:jest/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
     },
     "rules": {
-      "no-console": 0,
-      "import/extensions": 0
+        "no-console": 0,
+        "import/extensions": 0,
+        "consistent-return": 0,
+        "object-curly-newline": ["error", { "ImportDeclaration": "never" }]
     }
 }
