--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,8 +15,6 @@
     },
     "rules": {
         "no-console": 0,
-        "import/extensions": 0,
-        "consistent-return": 0,
-        "object-curly-newline": ["warn", { "ImportDeclaration": "always" }]
+        "import/extensions": 0
     }
 }
